resolve scrollbar issue and update icon for reverse

--- a/src/app/collection-form/collection-form.component.css
+++ b/src/app/collection-form/collection-form.component.css
@@ -173,10 +173,6 @@ label{
   background: #101A73;
 }
 
-::ng-deep.mat-button-disabled{
-  background: darkgray!important;
-}
-
 .spinner-border{
   color: white!important;
 }
