--- a/src/app/filter-search/filter-search.component.css
+++ b/src/app/filter-search/filter-search.component.css
@@ -30,65 +30,64 @@
 
 .icon-sizes{
   position: absolute;
-  right: -11px;
-  bottom: 1px;
+  right: -10px;
+  bottom: 2px;
   width: 40px;
-  height: 40px;
 }
 
 .search-icons{
-  position: absolute;
-  right: 0;
-  bottom: 10px;
-  width: 20px;
-  cursor: pointer;
+position: absolute;
+right: 0;
+bottom: 10px;
+width: 20px;
+cursor: pointer;
 }
 
 .cancel-btn{
-  position: absolute;
-  bottom: 10px;
-  right: 40px;
-  color: #172c73;
-  cursor: pointer;
+position: absolute;
+bottom: 10px;
+right: 40px;
+color: #172c73;
+cursor: pointer;
 }
 
 ::ng-deep .mat-icon-button .mat-button-wrapper{
-  color:#172c73!important;
+color:#172c73!important;
 }
 
 ::ng-deep.mat-form-field-appearance-outline .mat-form-field-suffix {
-  top: 0.4em !important;
+top: 0.4em !important;
 }
 
 ::ng-deep.mat-flat-button{
-  font-size:13px!important; ;
+font-size:13px!important; ;
 }
 
 
 .clear-btn{
-  background: #F7952C;
-  border: 1px solid #B2B2B1;
-  box-sizing: border-box;
-  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.12);
-  border-radius: 8px;
-  color: #ffffff;
+background: #F7952C;
+border: 1px solid #B2B2B1;
+box-sizing: border-box;
+box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.12);
+border-radius: 8px;
+color: #ffffff;
 }
 
 ::ng-deep.mat-select-arrow{
-  color: #e7e8f1!important;
+color: #e7e8f1!important;
 }
 
 .dropdown-icon{
   position: absolute;
-  bottom: 1px;
-  right: -11px;
-  width: 40px;
+  bottom: 2px;
+  right: -10px;
+  width: 39px;
 }
 
 .download-btn{
-  color:#ffffff;
-  background: #1A7DDF;
-  border-radius: 8px;
-  box-sizing: border-box;
-  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.12);
+color:#ffffff;
+background: #1A7DDF;
+border-radius: 8px;
+box-sizing: border-box;
+box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.12);
 }
